assets/stylesheets/record_select.css
.record-select {
  width: 400px;
  border: 1px solid #afd0f5;
  font-family: sans-serif;
  background-color: #fff;
  font-size: 11px;
}

.record-select img {
  border-width: 0px;
}

.record-select ol,
.record-select li {
  margin: 0px;
  padding: 0px;
  list-style: none;
}

.record-select a {
  color: #0066cc;
  text-decoration: none;
}

.record-select ol a {
  display: block;
  width: 100%;
  background-color: #e6f2ff;
  padding: 2px 4px;
}

.record-select ol .even a {
  background-color: #ffffff;
}

.record-select ol .pagination a {
  background-color: #eee;
}

.record-select ol .previous a {
  border-bottom: 1px solid #afd0f5;
}

.record-select ol .next a {
  border-top: 1px solid #afd0f5;
}

.record-select ol a:hover {
  background-color: #ffff88;
}

.record-select ol a.selected {
  background-color: #666;
  color: #fff;
}

.record-select-container {
  position: absolute;
}

.record-select-autocomplete form input {
  display: none;
}

